--- a/styles.css
+++ b/styles.css
@@ -65,3 +65,24 @@ h3 {
     font-weight: bolder;
     font-size: 20px;
 }
+/* buttons */
+
+.optionBtn button {
+    background-color: #d45069;
+    border: 4px solid #5f0b3d;
+    width: 150px;
+    height: 50px;
+    font-size: 30px;
+    font-weight: bold;
+    color: rgb(23, 23, 27);
+    margin-bottom: 30px;
+}
+
+#reset {
+    width: 120px;
+    height: 40px;
+    margin-top: 20px;
+    background-color: #5f0b3d;
+    color: #d45069;
+    font-size: 20px;
+}
